target_sources(DS3OptimalFashion
	PRIVATE
		"ArmorFinder.cpp"
		"ArmorFinder.h"
		"ArmorPieceFilterPanel.cpp"
		"ArmorPieceFilterPanel.h"
		"ArmorSetPreviewPanel.cpp"
		"ArmorSetPreviewPanel.h"
		"ArmorSetSelectorPanel.cpp"
		"ArmorSetSelectorPanel.h"
		"CurrentParameters.cpp"
		"CurrentParameters.h"
)

add_subdirectory("Details")