target_sources(DS3OptimalFashion
	PRIVATE
		"ArmorFinderPanel.cpp"
		"ArmorFinderPanel.h"
		"ArmorPieceFilterPanel.cpp"
		"ArmorPieceFilterPanel.h"
		"ArmorSetPreviewPanel.cpp"
		"ArmorSetPreviewPanel.h"
		"ArmorSetSelectorPanel.cpp"
		"ArmorSetSelectorPanel.h"
		"ParametersDisplayPanel.cpp"
		"ParametersDisplayPanel.h"
)

add_subdirectory("Details")